--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,15 +6,22 @@
     "default_icon": "img/icon.png",
     "default_popup": "popup.html"
     },
-  "permissions": [
-	"tabs",
-	"http://*/*",
-  "https://*/*"
-  ],
-  "options_page": "options.html",
-  "background": {"scripts": ["exe/eskupbckground.js"]},
-  "icons": { "48": "img/eskupicon48.png",
-          "128": "img/eskupicon128.png" },
-  "content_security_policy": "script-src 'self' https://example.com; object-src 'self' https://vimeo.com",
-  "manifest_version" : 2
-}
+    "permissions": [
+    "tabs",
+    "http://*/*",
+    "https://*/*"
+    ],
+    "content_scripts": [
+      {
+        "matches": ["https://twitter.com/*"],
+        "css": ["css/dialog.css", "css/twitter-integration.css"],
+        "js": ["lib/jquery-2.1.1.min.js", "exe/twitter2eskup.js"]
+      }
+    ],
+    "options_page": "options.html",
+    "background": {"scripts": ["exe/eskupbckground.js"]},
+    "icons": { "48": "img/eskupicon48.png",
+    "128": "img/eskupicon128.png" },
+    "content_security_policy": "script-src 'self' https://example.com; object-src 'self' https://vimeo.com",
+    "manifest_version" : 2
+  }
