--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,13 +1,15 @@
 ﻿{
   "manifest_version": 2,
+  "author": "Luis Pedraza",
   "name": "eXkup",
   "version": "1.0",
-  "description": "Extensión de Chrome no oficial para utilizar Eskup, la red social de EL PAÍS. (http://www.eskup.es)",
+  "description": "Extensión para visualizar comentarios en elpais.com, cincodias.com, as.com, cadenaser.com y los40.com, y acceder a Eskup, la red social de EL PAÍS",
   "browser_action": {
     "default_icon": "img/icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
+    "storage",
     "tabs",
     "http://*/*",
     "https://*/*"
