arreglado el ancho de la ventana de conversaciones de la visualización

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "author": "Luis Pedraza",
   "name": "eXkup",
-  "version": "1.0",
-  "description": "Extensión para visualizar comentarios en elpais.com, cincodias.com, as.com, cadenaser.com y los40.com, y acceder a Eskup, la red social de EL PAÍS",
+  "version": "1.1",
+  "description": "Visualiza comentarios en elpais.com, cincodias.com, as.com, cadenaser.com y los40.com, y utiliza Eskup, la red social de EL PAÍS",
   "browser_action": {
     "default_icon": "img/icon.png",
     "default_popup": "popup.html"
