--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,6 +14,9 @@
     "http://*/*",
     "https://*/*"
   ],
+  "background": {
+    "scripts": ["js/background.js"]
+    },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
